@@ -340,6 +340,8 @@ x2goserver (4.1.0.4-0x2go1.2) UNRELEASED; urgency=medium
       errors.
     - X2Go/Server/Agent/NX/Options.pm: simplify error handling by splitting
       intermediate checking out into a separate subroutine.
+    - X2Go/Server/Agent/NX/Options.pm: rename $options variable to
+      $intermediate in intermediate_to_string () for internal consistency.
   * debian/control:
     + Build-depend upon lsb-release for distro version detection.
   * debian/x2goserver.manpages:
